# ava-assignment

./: README.md  pyproject.toml  task2.ipynb  task3.ipynb
data/travel_data/: AirTravel_USA.xls  Auto_vehicle_miles_traveled_USA.csv  Definitions.txt  TrainTravel_USA.csv
data/tuberculosis_data/: Country_Master_Data.csv  Data_after_2000.csv  Defintions variables.csv
data/weather_data/: Definitions.txt  weather.csv
