[tool.poetry]
name = "ava-assignment-1"
version = "0.1.0"
description = ""
authors = ["cynthia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
xlrd = "^2.0.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
numpy = "^2.1.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
